# chatServer

./: CMakeLists.txt  README.md
include/server/: ChatServer.h  ChatService.h  friendModel.h  group.hpp  groupModel.h  groupUser.hpp  offlineMSGmodel.h  public.h  user.hpp  userModel.h
include/server/datebase/: datebase.h
include/server/redis/: redis.h
src/: CMakeLists.txt
src/client/: CMakeLists.txt  a.out  client.cpp
src/server/: CMakeLists.txt  ChatServer.cpp  ChatService.cpp  friendModel.cpp  groupModel.cpp  main.cpp  offlineMSGmodel.cpp  userModel.cpp
src/server/datebase/: datebase.cpp
src/server/redis/: redis.cpp
